--- a/app/src/main/res/layout/fourth_fragment.xml
+++ b/app/src/main/res/layout/fourth_fragment.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="25dp"
-    android:background="@color/txt_white"
-    tools:context=".MainActivity">
-
-
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:background="@color/bg_gray"
+    android:id="@+id/fourth_fragment"
+    android:padding="25dp">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -19,14 +12,14 @@
         android:textSize="28sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/txt_black"
-        android:text="@string/title_login" />
+        android:text="Mis Datos" />
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="105dp"
         android:layout_gravity="center"
         android:layout_marginBottom="25dp"
-        android:background="@drawable/buy" />
+        android:background="@drawable/user" />
 
 
 
@@ -34,8 +27,24 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:gravity="center"
         android:layout_weight="3">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/txt_black"
+            android:text="@string/label_register_name" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:gravity="center"
+            android:textColor="@color/txt_black"
+            android:layout_marginBottom="20dp"
+            />
 
 
 
@@ -50,7 +59,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/border"
+            android:gravity="center"
             android:textColor="@color/txt_black"
+            android:layout_marginBottom="20dp"
             />
 
         <TextView
@@ -58,36 +69,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:textColor="@color/txt_black"
-            android:text="@string/label_password" />
+            android:text="@string/label_register_phone" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/border"
+            android:gravity="center"
             android:textColor="@color/txt_black"
+            android:layout_marginBottom="20dp"
+
             />
 
         <Button
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:background="@color/Back_login"
             android:textColor="@color/txt_white"
-            android:id="@+id/btn_ingresar"
-            android:text="@string/btn_login"
+            android:text="Editar"
             />
 
-        <TextView
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="25dp"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Back_login"
-            android:text="@string/label_go_to_register"
-            android:id="@+id/txtViewgo_to_register"
-            />
     </LinearLayout>
-
 </LinearLayout>
