--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="Back_login">#303f9f</color>
     <color name="txt_white">#ffffff</color>
     <color name="txt_black">#333333</color>
+    <color name="bg_gray">#f4f4f4</color>
 </resources>
